# hook-api

./: .gitignore  README.md  cli.py  pyproject.toml  run.sh
app/: core.py  main.py  mcp_wrapper.py
tests/: test_mcp_wrapper.py
webhook_mcp_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
